--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -157,7 +157,7 @@
     margin-bottom: 10px;
     color: $highlight;
     text-shadow: 1px 1px #191919;
-    font-size: 60px;
+    font-size: 50px;
     font-family: 'Roboto Condensed', sans-serif;
   }
 }
@@ -291,6 +291,42 @@ hr {
       background: $white;
     }
   }
+}
+
+@media (max-width: 770px) {
+    .skinny {
+      #post_title_show {
+        padding: 1px 20px;
+        margin-bottom: 10px;
+        h1 {
+          font-size: 35px !important;
+        }
+      }
+    }
+
+    #content {
+      padding: 0 20px;
+    }
+}
+
+@media (max-width: 380px) {
+    .skinny {
+      max-width: 300px;
+      margin: 0 auto !important;
+      #post_title_show {
+        padding: 0px 15px;
+        h1 {
+          padding-top: 20px;
+        }
+      }
+    }
+
+    #content {
+      padding: 0 15px;
+      p {
+        font-size: 1em;
+      }
+    }
 }
 
 @media (max-width: 386px) {
