css fixing and added 2 ads

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -217,8 +217,19 @@
           </div>
         <% end %>
       </div>
-      <a class="apply" href="/applies/new" target="blank">
-      </a>
+      <div class="ads">
+        <a href="/applies/new" target="blank"><img class="apply" src="http://i.imgur.com/UpKRjGe.jpg" /></a>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Responsive 1 -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-4986861624955300"
+             data-ad-slot="2060918070"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
     </div>
   </div>
 </div>
