--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -175,14 +175,16 @@ html, body {
   }
 }
 
-.apply {
-  width: 20%;
-  background-image: url("applypic.jpg");
-  height: 300px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  &:hover {
-    opacity: .85;
+.ads {
+  max-width: 250px;
+  max-height: 600px;
+
+  .apply {
+    min-width: 100%;
+    max-width: 100%;
+    &:hover {
+      opacity: .85;
+    }
   }
 }
 
@@ -304,6 +306,7 @@ footer {
   margin-left: 20px;
   width: 100%;
   .thumbnail {
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -954,6 +957,7 @@ hr {
   }
 }
 
+@import 'ads';
 @import "userprofile";
 @import "pages";
 @import "posts_projects";
