--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -514,7 +514,8 @@ body {
 
   .nav-title {
     font-family: 'justwaitandsee';
-    margin-top: 2px;
+    font-size: 1.4rem;
+    font-style: italic;
     &:hover {
       color: white;
     }
