--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -39,14 +39,15 @@
         overflow:hidden;
       }
       p {
-        font-size: .85em;
+        font-size: .9em;
         margin: 0;
         margin-left: 10px;
         line-height: 18px;
         font-family: 'Roboto Condensed', sans-serif;
+        font-style: italic;
         a {
+          color: #191919;
           text-decoration: none;
-          color: black;
         }
       }
     }
