--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -1,5 +1,5 @@
 <div class="skinny_wrapper theimages">
-  <h1 id="page_title" style="margin-top: -10px;">Finding Images</h1>
+  <h1 id="page_title">Finding Images</h1>
   <%= image_tag("11.png") %>
 
   <ul>
