--- a/app/views/pages/styling.html.erb
+++ b/app/views/pages/styling.html.erb
@@ -1,5 +1,5 @@
 <div class="skinny_wrapper criteria">
-  <h1 id="page_title" style="margin-top: -10px;">How To Style Your Articles</h1>
+  <h1 id="page_title">How To Style Your Articles</h1>
   <p class="question">
     What do the symbols next to my posts mean?</p>
     <span><%= image_tag "saved.png", class: "icon" %> <p class='p--nextto'>Your article is saved, and you're the only one who can see it and can edit it. It has not been submitted for approval yet.</p></span>
