--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -1,5 +1,5 @@
 <div class="skinny_wrapper writing">
-  <h1 id="page_title" style="margin-top: -10px;">Writing The Perfect Article</h1>
+  <h1 id="page_title">Writing The Perfect Article</h1>
   <p>
     <b class="yellow">Please read this entire tutorial before you write your first article.</b>
   </p>
