--- a/app/views/welcome/_signup.html.erb
+++ b/app/views/welcome/_signup.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="exclusive-offer">
-    <h5 class="exclusive-title" id="exclusive-title--id">Become a VIP subscriber of the Teen Magazine</h5>
+    <h5 class="exclusive-title" id="exclusive-title--id">Join our mailing list to get the latest from The Teen Magazine!</h5>
   </div>
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <div class="signup">
