--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -195,6 +195,10 @@
      a:hover {
       opacity: 0.5;
      }
+     blockquote {
+       border-left: 5px solid #cccccc;
+       padding-left: 10px;
+     }
      span {
        font-family: 'Raleway', sans-serif !important;
        font-size: 1.1rem !important;
