--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,6 @@
   </div>
   <% end %>
 </div>
-
 <h1 id="page_title" style="margin-bottom: -80px; margin-top:-50px; border-bottom: none;">Users</h1>
 
 <div id="posts_wrapper" class="skinny_wrapper">
@@ -18,4 +17,5 @@
       </div>
   <% end %>
   <%= link_to "New User", new_user_registration_path, :class => "link--edit" %>
+  <br /><a class="link--edit" href="/ranking">Ranking</a>
 </div>
